# tak

./: .gitlab-ci.yml  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/libs/arm64-v8a/: tak.c.atp
android/libs/armeabi-v7a/: tak.c.atp
android/libs/x86/: tak.c.atp
android/libs/x86_64/: tak.c.atp
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: environmentProvider.cpp  environmentProvider.h
android/src/main/kotlin/com/build38/tak/flutter/: TakPlugin.kt
android/tools/UpdateBinary/linux/: UpdateBinary
android/tools/UpdateBinary/macos/: UpdateBinary
ios/: tak.podspec
ios/Classes/: TakPlugin.swift
lib/: check_integrity_response.dart  file_protector.dart  register_response.dart  root_status_response.dart  secure_storage.dart  tak_plugin.dart  tak_return_codes.dart
lib/native_tak/: is_registered_response.dart  tak.dart  tak_bindings_generated.dart  tak_byte_array_response.dart  tak_byte_buffer.dart  tak_id_response.dart
lib/tls/: tak_client_http.dart  tls_connection.dart  tls_connection_response.dart
src/: native_tak.cpp  native_tak.h  tak.h
